--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
-<ion-app>
-  <ion-router-outlet></ion-router-outlet>
-</ion-app>
+@if (!isMainPage()) {
+  <a routerLink="/" class="button back-button">
+    <app-arrow-back-icon/>
+    Back to home</a>
+}
+
+<header class="header">
+  <app-angular-icon/>
+  <app-firebase-icon/>
+</header>
+
+<router-outlet />
